# kea-capture

./: CMakeLists.txt  README.md
python/: capture_on_camera.py
src/: capture.cpp  reader.cpp
